Improve python parsing. Add new edge type to graph.

--- a/graphics/index.html
+++ b/graphics/index.html
@@ -14,9 +14,10 @@
       <div id="checkboxDropdown" class="dropdown-content">
         <label><input type="checkbox" value="0" checked> Class-Level Import</label>
         <label><input type="checkbox" value="1" checked> Top-Level Import</label>
-        <label><input type="checkbox" value="2" checked> Used Import</label>
-        <label><input type="checkbox" value="3" checked> Attribute</label>
-        <label><input type="checkbox" value="4" checked> Inheritance</label>
+        <label><input type="checkbox" value="2" checked> Used Class-Level Import</label>
+        <label><input type="checkbox" value="3" checked> Used Top-Level Import</label>
+        <label><input type="checkbox" value="4" checked> Attribute</label>
+        <label><input type="checkbox" value="5" checked> Inheritance</label>
       </div>
     </div>
 
