Add command line execution

--- a/graphics/index.html
+++ b/graphics/index.html
@@ -12,8 +12,8 @@
     <div class="dropdown">
       <button onclick="toggleDropdown()" class="dropbtn">Dependency Types ⌄</button>
       <div id="checkboxDropdown" class="dropdown-content">
-        <label><input type="checkbox" value="0" checked> Class-Level Import</label>
-        <label><input type="checkbox" value="1" checked> Top-Level Import</label>
+        <label><input type="checkbox" value="0"> Class-Level Import</label>
+        <label><input type="checkbox" value="1"> Top-Level Import</label>
         <label><input type="checkbox" value="2" checked> Used Class-Level Import</label>
         <label><input type="checkbox" value="3" checked> Used Top-Level Import</label>
         <label><input type="checkbox" value="4" checked> Attribute</label>
